# simple-jailbreak-keyword-filter

./: AntiJailBreak.py  CHANGELOG.md  README.md  bot.py  pyproject.toml  requirements.txt  test_antijailbreak.py
