[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antijailbreak"
version = "0.1.0"
description = "Keyword-based prompt filter for basic jailbreak detection."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
addopts = "-q"
